--- a/src/sysGCU/Makefile
+++ b/src/sysGCU/Makefile
@@ -26,7 +26,7 @@ GC_FILES:=\
 	$(BUILD_DIR)/src/sysGCU/gameConfig.o\
 	$(BUILD_DIR)/src/sysGCU/fogMgr.o\
 	$(BUILD_DIR)/asm/sysGCU/aramMgr.o\
-	$(BUILD_DIR)/asm/sysGCU/resourceMgr.o\
+	$(BUILD_DIR)/src/sysGCU/resourceMgr.o\
 	$(BUILD_DIR)/src/sysGCU/resourceMgr2D.o\
 	$(BUILD_DIR)/src/sysGCU/sysMaterialAnim.o\
 	$(BUILD_DIR)/src/sysGCU/P2DScreen.o\
