--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [usa, usa.demo]
+        version: [GPVE01, GPVE01_D17]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [usa, usa.demo]
+        version: [GPVE01, GPVE01_D17]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
