Add objdiff report, Makefile dep autodownloads, lots of cleanup & more

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,8 @@ jobs:
       run: |
         python configure.py --map --version ${{ matrix.version }} \
             --binutils /binutils --compilers /compilers
-        ninja all_source build/${{ matrix.version }}/progress.json
+        ninja all_source build/${{ matrix.version }}/progress.json \
+            build/${{ matrix.version }}/report.json
     - name: Upload progress
       if: github.ref == 'refs/heads/main'
       continue-on-error: true
@@ -43,6 +44,11 @@ jobs:
       with:
         name: ${{ matrix.version }}_maps
         path: build/${{ matrix.version }}/**/*.MAP
+    - name: Upload report
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.version }}_report
+        path: build/${{ matrix.version }}/report.json
 
   build_make:
     name: Build (legacy)
@@ -60,14 +66,6 @@ jobs:
         submodules: recursive
     - name: Git config
       run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
-    - name: Download tools
-      run: |
-        mkdir -p build/tools
-        python tools/download_tool.py dtk build/tools/dtk --tag v0.9.4
-        python tools/download_tool.py sjiswrap build/tools/sjiswrap.exe --tag v1.1.1
-        python tools/download_tool.py binutils build/binutils --tag 2.42-1
-        python tools/download_tool.py wibo build/tools/wibo --tag 0.6.11
-        python tools/download_tool.py compilers build/compilers --tag 20240706
     - name: Build
       run: |
         make -j$(nproc) MAPGENFLAG=1 VERSION=${{matrix.version}}
