--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "[c]": {
-        "files.encoding": "utf8",
+        "files.encoding": "shiftjis",
         "editor.defaultFormatter": "ms-vscode.cpptools"
     },
     "[cpp]": {
-        "files.encoding": "utf8",
+        "files.encoding": "shiftjis",
         "editor.defaultFormatter": "ms-vscode.cpptools"
     },
     "editor.tabSize": 4,
