Upload clang-format to normalise versions

--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,59 @@
+*.7z
+*.a
+*.bat
+*.ctx
+*.d
 *.dat
-*.exe
 *.dll
-*.idb
+*.dol
+*.dump
+*.elf
+*.exe
+*.exe
+*.filters
 *.id0
 *.id1
 *.id2
-*.nam
-*.til
-*.o
-*.out
-*.elf
-*.dol
-*.a
-*.d
-*.map
-*.exe
-*.dump
-*.7z
-*.bat
-*.sln
-*.filters
-*.vcxproj
-*.user
-*.ctx
-include/*.s
-
-build/
-tools/mwcc_compiler/
-tools/powerpc/
-!aoi.exe
-decomp/
-errors.txt
-output.asm
-Debug/
-.vs/
-.vscode/*.log
-
-ctx.c
-out-ok.txt
-out.txt
-.DS_Store
-sheet.py
-sheet.csv
-sheet.tsv
+*.idb
 *.lnk
 *.log
-build.ninja
-__pycache__
+*.map
+*.nam
+*.o
+*.out
+*.sln
+*.til
+*.user
+*.vcxproj
+.DS_Store
+.idea
+.mypy_cache
+.ninja_*
 .ninja_deps
 .ninja_log
+.vs/
+.vscode/*.log
+/*.txt
+Debug/
+__pycache__
+build.ninja
+build/
+ctx.c
+decomp/
+errors.txt
+include/*.s
 newlines.py
 objdiff.json
-
-.idea
-.ninja_*
-.mypy_cache
-
 orig/*/*
+out-ok.txt
+out.txt
+output.asm
+sheet.csv
+sheet.py
+sheet.tsv
+tools/mwcc_compiler/
+tools/powerpc/
+
+!aoi.exe
+!clang-format.exe
 !orig/*/.gitkeep
-/*.txt
